# serializer version: 1
# name: test_sensor_entity_state[sensor.test_capsuleer_buy_orders-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_buy_orders',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Buy orders',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Buy orders',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'buy_orders',
    'unique_id': '12345678_buy_orders',
    'unit_of_measurement': 'orders',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_buy_orders-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Buy orders',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'orders',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_buy_orders',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_current_skill_finish-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_current_skill_finish',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current skill finish',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Current skill finish',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'current_skill_finish',
    'unique_id': '12345678_current_skill_finish',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_current_skill_finish-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Test Capsuleer Current skill finish',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_current_skill_finish',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_current_training_skill-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_current_training_skill',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current training skill',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Current training skill',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'current_training_skill',
    'unique_id': '12345678_current_training_skill',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_current_training_skill-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Current training skill',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_current_training_skill',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_industry_jobs-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_industry_jobs',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Industry jobs',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Industry jobs',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'industry_jobs',
    'unique_id': '12345678_industry_jobs',
    'unit_of_measurement': 'jobs',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_industry_jobs-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Industry jobs',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'jobs',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_industry_jobs',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_jump_fatigue-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_jump_fatigue',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Jump fatigue',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Jump fatigue',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'jump_fatigue',
    'unique_id': '12345678_jump_fatigue',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_jump_fatigue-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Test Capsuleer Jump fatigue',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_jump_fatigue',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': '12345678_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Location',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_next_industry_finish-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_next_industry_finish',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Next industry finish',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Next industry finish',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'next_industry_finish',
    'unique_id': '12345678_next_industry_finish',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_next_industry_finish-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Test Capsuleer Next industry finish',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_next_industry_finish',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_sell_orders-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_sell_orders',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Sell orders',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Sell orders',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'sell_orders',
    'unique_id': '12345678_sell_orders',
    'unit_of_measurement': 'orders',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_sell_orders-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Sell orders',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'orders',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_sell_orders',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_ship-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_ship',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ship',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ship',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ship',
    'unique_id': '12345678_ship',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_ship-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Ship',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_ship',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_skill_queue-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_skill_queue',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Skill queue',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Skill queue',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'skill_queue_count',
    'unique_id': '12345678_skill_queue_count',
    'unit_of_measurement': 'skills',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_skill_queue-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Skill queue',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'skills',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_skill_queue',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_total_skill_points-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_total_skill_points',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total skill points',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total skill points',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_sp',
    'unique_id': '12345678_total_sp',
    'unit_of_measurement': 'SP',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_total_skill_points-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Total skill points',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'SP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_total_skill_points',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_unallocated_skill_points-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_unallocated_skill_points',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Unallocated skill points',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Unallocated skill points',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'unallocated_sp',
    'unique_id': '12345678_unallocated_sp',
    'unit_of_measurement': 'SP',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_unallocated_skill_points-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Unallocated skill points',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'SP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_unallocated_skill_points',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_unread_mail-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_unread_mail',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Unread mail',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Unread mail',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'unread_mail',
    'unique_id': '12345678_unread_mail',
    'unit_of_measurement': 'messages',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_unread_mail-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Unread mail',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'messages',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_unread_mail',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_wallet_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_wallet_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wallet balance',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wallet balance',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wallet_balance',
    'unique_id': '12345678_wallet_balance',
    'unit_of_measurement': 'ISK',
  })
# ---
# name: test_sensor_entity_state[sensor.test_capsuleer_wallet_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Wallet balance',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ISK',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_wallet_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
